# crompt

./: Cargo.toml  DESIGN.md  README.md  rustfmt.toml
docs/: ARG_DIFF_ANALYSIS.md  CLEANUP_REPORT.md  TOML_FORMAT.md
example/: example.define.toml  example.out.toml  example.output.sh  example.toml
examples/: test_arg_struct.rs  test_toml.rs  validate_toml.rs
src/: core.rs  main.rs  shell.rs
src/core/: arg.rs  command.rs  config.rs  library.rs  proxy.rs  require.rs
src/shell/: block.rs  render.rs
