[package]
name = "crompt"
version = "0.1.0"
edition = "2021"
authors = ["BppleMan <bppleman@gmail.com>"]
description = "Structured Config-as-Script — zero-boilerplate Shell CLI scaffolding."
license = "Apache-2.0"
repository = "https://github.com/BppleMan/crompt"
homepage = "https://github.com/BppleMan/crompt"
documentation = "https://docs.rs/crompt"
readme = "README.md"
keywords = ["shell-script", "cli", "scaffold", "codegen", "config"]
categories = ["command-line-utilities", "development-tools", "config"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
